# prsb_site

./: .gitignore  .pg_service.conf  Dockerfile  Dockerrun.aws.json  README.md  apprunner.yaml  eb_package_for_deployment.sh  lambda_package_for_deployment.sh  pyproject.toml
.github/workflows/: deploy_dev.yml
docs/superpowers/plans/: 2026-07-20-max-instruments-usage.md
docs/superpowers/specs/: 2026-07-20-max-instruments-usage-design.md
env_vars/: dev.env
prsb/: .prsb_pgpass.demo  manage.py
prsb/band/: admin.py  models.py  tests.py  urls.py  views.py
prsb/band/migrations/: 0001_initial.py  0002_alter_song_author.py  0003_song_is_active.py  0004_alter_song_author.py  0005_alter_song_author.py  0006_alter_song_author.py  0007_songpart.py  0008_bandmember_instrument_and_more.py  0009_gig_alter_bandmember_bio_and_more.py  0010_song_form.py  0011_alter_bandmember_emergency_contact_phone.py  0012_giginstrument.py  0013_alter_bandmember_options_alter_song_options_and_more.py  0014_partassignment_performance_readiness.py  0015_gigpartassignmentoverride.py  0015_gigpartassignmentoverride_squashed_0018_gigpartassignmentoverride_performance_readiness.py  0016_remove_gigpartassignmentoverride_unique_gigpartassignmentoverride.py  0017_remove_gigpartassignmentoverride_gig_and_more.py  0018_gigpartassignmentoverride_performance_readiness.py  0019_gig_start_datetime.py  0020_alter_gig_options_alter_instrument_options_and_more.py  0021_alter_giginstrument_options_gigsetlistentry.py  0022_gig_address_gig_end_datetime_gig_notes.py  0023_alter_gig_address.py  0024_alter_gig_notes.py  0025_alter_bandmember_bio_alter_bandmember_birthday.py  0026_bandspecialdate_and_more.py  0027_instrument_include_in_gig_song_count.py  0028_gigpartassignmentoverride_override_type.py  0029_alter_gig_address_max_length.py
prsb/band/static/band/: style.css
prsb/band/templates/band/: bandmember_detail.html  bandmember_list.html  base.html  gig_availability_update.html  (+20 more)
prsb/band/templatetags/: __init__.py  custom_filters.py
prsb/prsb/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
prsb/scripts/: __init__.py  birthday_checker.py  create_db_objects.py  email_test.py  get_song_part_availability.py  gig_part_assignment.py
(+5 files in other folders)
